public/css/style.css
/* @override http://localhost:4567/css/style.css */

/* @group General */
body 
{
	background: #fafafa;
	color: #333;
  	font: normal 100% 'Droid Sans', arial, serif;
  	letter-spacing: 0.15em;
  	text-align:left;
  	padding-top: 7.5%;
}

img { max-width: 100%; }

/* @group Typography */
h1{ font-size: 4em; font-family: 'Bevan'; width: 100%; text-shadow: 1px 1px 1px rgba(255,255,255,1); }
h2{ font-size: 1.5em; margin: 0em 0em 0.5em; text-shadow: 1px 1px 1px rgba(255,255,255,1); }
h3{ font-size: 1.5em; margin: 0em 0em; text-transform: uppercase; font-family: 'Bevan'; width: 65%; opacity: 0.5; text-shadow: 1px 1px 1px rgba(255,255,255,1); }
h4{ font-size: 1.75em; margin: .125em 0em; }
h5{ font-size: 1.50em; margin: .25em 0em; }
h6{ font-size: 1.25em; margin: .375em 0em;}
p { margin: 1em 0em; font-size: 1em; line-height: 1.75em; }
/* @end */

/* @end */

/* @group Profile Module */
#profile #details, #profile #overview
{
  margin: 0px auto;
  width: 61.803402%;
  max-width: 632.866836px;
  min-width: 384px;
}

#profile #overview
{
  min-width: 384px;
  padding: 0 0 5%;
  border-bottom: 1px dashed #e3e3e3;
}

#profile #details
{
  margin: 0 auto 3em;
  padding: 2em 0px 0px;
}

#profile #info
{
  margin: 0 0 0 35%;
  width:65%;
}

#profile figure#avatar
{
  padding:2%;
  margin: 0 0 0 0;
  border: 1px solid #e3e3e3;
  width:25%;
  height: auto;
  float:left;
  background: #f7f7f7;  
  -moz-border-radius:4px;
  -webkit-border-radius:4px;
  border-radius:4px;
  -moz-box-shadow:0px 0px 6px #666;
  -webkit-box-shadow:0px 0px 6px #666;
  box-shadow:0px 0px 6px #666;
}

#profile figure#avatar img
{
  max-width: 100%;
  -moz-border-radius:4px;
  -webkit-border-radius:4px;
  border-radius:4px;
}

@media screen and (max-width: 480px)
{
	figure#avatar
	{
		display: none;
	}
	
	#profile #info
	{
	  margin: 0 0 0 0em;
	}
	
	#profile #details, #profile #overview
	{
	width:80%;
	min-width: 0px;
	}
	
	#profile #info
	{
	  width:100%;
	  min-width: 0px;
	}	
}
/* @end */

/* @group Links Module */
#links
{
  height: 128px;
  padding: 35px 0px;
  border-top:1px solid #FFB8B5; 
  background: -moz-linear-gradient(top, #FFE4E3 0%, #FFFFFF 36%, #FFFFFF 100%);
  background: -webkit-gradient(linear, center top, center bottom, color-stop(0%,#FFE4E3), color-stop(36%,#FFFFFF), color-stop(100%,#FFFFFF));
  background: -o-linear-gradient(top, #FFE4E3 0%, #FFFFFF 36%, #FFFFFF 100%);
  background: linear-gradient(top, #FFE4E3 0%, #FFFFFF 36%, #FFFFFF 100%);
}
#links ul
{
	display:table;
	margin:0px auto;
}
#links ul li
{
  list-style-type: none;
  display: inline;
}

#links ul li a
{
  display:block;
  float:left;
  width: 64px;
  height:64px;
  margin: 5px 5px;
  text-indent:-1000em;
  
  background: #666 url(/img/links.png);
  opacity: 0.6;
  border: 1px solid rgba(255,255,255,0.2);
  border-radius: 15px;

  -o-box-shadow: 0 2px 6px rgba(0,0,0,0.5), inset 0 1px rgba(255,255,255,0.3) inset 0 10px 20px rgba(255,255,255,0.25), inset 0 -15px 30px rgba(0,0,0,0.3);
  -webkit-box-shadow: 0 2px 6px rgba(0,0,0,0.5), inset 0 1px rgba(255,255,255,0.3), inset 0 10px 20px rgba(255,255,255,0.25), inset 0 -15px 30px rgba(0,0,0,0.3);
  -moz-box-shadow: 0 2px 6px rgba(0,0,0,0.5), inset 0 1px rgba(255,255,255,0.3), inset 0 10px 20px rgba(255,255,255,0.25), inset 0 -15px 30px rgba(0,0,0,0.3);
  box-shadow: 0 2px 6px rgba(0,0,0,0.5), inset 0 1px rgba(255,255,255,0.3), inset 0 10px 20px rgba(255,255,255,0.25), inset 0 -15px 30px rgba(0,0,0,0.3);

  -webkit-transition: all .4s ease;
}

#links ul li a:hover, #links ul li a:active
{
  opacity: 1.0;
  border-radius: 5px;

}

/* @group Link Image Sprite */

#links #portfolio { background-position: 0px 0px; }
#links #twitter { background-position: 0px 0px; }
#links #facebook { background-position: 380px 0px }
#links #github { background-position: 64px 0px; }
#links #forrst { background-position: 190px 0px; }
#links #dribble { background-position: 0px 0px; }
#links #linkedin { background-position: 125px 0px }
#links #gowalla { background-position: 315px 0px; }
#links #foursquare { background-position: 252px 0px; }

/* @end */
/* @end */

/* @group Login Form*/
#login
{
	width: 600px;
	margin: 0px auto;
	margin-top: 115px;
}
/* @end */

/* My Comment */

